--- a/project_starter/style.css
+++ b/project_starter/style.css
@@ -1,9 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Muli:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto:wght@400;700&display=swap');
 
-:root {
-  --line-border-fill: #3498db;
-  --line-border-empty: #e0e0e0;
-}
 
 * {
   box-sizing: border-box;
@@ -11,8 +7,7 @@
 
 
 body {
-  background-color: #f6f7fb;
-  font-family: 'Muli', sans-serif;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,84 +15,4 @@ body {
   margin: 0;
   overflow: hidden;
   height: 100vh;
-}
-
-.container {
-  text-align: center;
-}
-
-.progress-container{
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  margin-bottom: 30px;
-  max-width: 100%;
-  width: 350px;
-
-}
-
-.progress-container::before {
-  content:'';
-  background-color: var(--line-border-empty);
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  height: 4px;
-  width: 100%;
-  z-index: -1;
-}
-
-.progress {
-  background-color: var(--line-border-fill);
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  height: 4px;
-  width: 0%;
-  z-index: -1;
-  transition: .4s ease;
-}
-
-.circle{
-  background-color: #fff;
-  color: #999;
-  border-radius: 100%;
-  height: 30px;
-  width: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 3px solid var(--line-border-empty);
-  transition: .4s ease;
-}
-
-.circle.active {
-  border-color: var(--line-border-fill);
-}
-
-.btn {
-  background-color: var(--line-border-fill);
-  color: #fff;
-  border: 0;
-  border-radius: 6px;
-  cursor: pointer;
-  font-family: inherit;
-  padding: 8px 30px;
-  margin: 5px;
-  font-size: 14px;
-}
-
-.btn:active {
-  transform: scale(0.98);
-}
-
-btn:focus {
-  outline: 0;
-}
-
-.btn:disabled {
-  background-color: var(--line-border-empty);
-  cursor: not-allowed;
 }
